[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/UI/Backgrounds/background 2.png" type="Texture" id=1]
[ext_resource path="res://scenes/TopUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/UI/Bottom UI v 2.png" type="Texture" id=3]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=4]
[ext_resource path="res://scenes/Sinker.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/IceHolder.gd" type="Script" id=6]
[ext_resource path="res://scripts/LockHolder.gd" type="Script" id=7]
[ext_resource path="res://scripts/ConcreteHolder.gd" type="Script" id=8]
[ext_resource path="res://scripts/SlimeHolder.gd" type="Script" id=9]
[ext_resource path="res://scenes/GameOverPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/GoalHolder.gd" type="Script" id=11]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=12]

[node name="GameWindow" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TopUI" parent="." instance=ExtResource( 2 )]

[node name="BottomUI" type="TextureRect" parent="."]
margin_top = 928.0
margin_right = 576.0
margin_bottom = 1020.0
texture = ExtResource( 3 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 4 )
width = 8
height = 10
start = Vector2( 64, 800 )
offset = 64
y_offset = -2
max_score = 5000
piece_value = 10
current_counter_value = 100
is_moves = true
sinker_piece = ExtResource( 5 )
sinkers_in_scene = true
max_sinkers = 2

[node name="Timer" type="Timer" parent="Grid"]

[node name="IceHolder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="LockHolder" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="ConcreteHolder" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="SlimeHolder" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollapseTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RefillTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GameOverPanel" parent="." instance=ExtResource( 10 )]

[node name="GoalHolder" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Goal" parent="GoalHolder" instance=ExtResource( 12 )]
max_needed = 5
goal_string = "blue"

[node name="Goal2" parent="GoalHolder" instance=ExtResource( 12 )]
max_needed = 5
goal_string = "orange"

[node name="Goal3" parent="GoalHolder" instance=ExtResource( 12 )]
max_needed = 5
goal_string = "pink"
[connection signal="check_goal" from="Grid" to="GoalHolder" method="_on_Grid_check_goal"]
[connection signal="damage_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_damage_concrete"]
[connection signal="damage_ice" from="Grid" to="IceHolder" method="_on_Grid_damage_ice"]
[connection signal="damage_lock" from="Grid" to="LockHolder" method="_on_Grid_damage_lock"]
[connection signal="damage_slime" from="Grid" to="SlimeHolder" method="_on_Grid_damage_slime"]
[connection signal="game_over" from="Grid" to="GameOverPanel" method="_on_Grid_game_over"]
[connection signal="make_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_make_concrete"]
[connection signal="make_ice" from="Grid" to="IceHolder" method="_on_Grid_make_ice"]
[connection signal="make_lock" from="Grid" to="LockHolder" method="_on_Grid_make_lock"]
[connection signal="make_slime" from="Grid" to="SlimeHolder" method="_on_Grid_make_slime"]
[connection signal="setup_max_score" from="Grid" to="TopUI" method="_on_Grid_setup_max_score"]
[connection signal="update_counter" from="Grid" to="TopUI" method="_on_Grid_update_counter"]
[connection signal="update_score" from="Grid" to="TopUI" method="_on_Grid_update_score"]
[connection signal="timeout" from="Grid/Timer" to="Grid" method="_on_Timer_timeout"]
[connection signal="remove_lock" from="LockHolder" to="Grid" method="_on_LockHolder_remove_lock"]
[connection signal="remove_concrete" from="ConcreteHolder" to="Grid" method="_on_ConcreteHolder_remove_concrete"]
[connection signal="remove_slime" from="SlimeHolder" to="Grid" method="_on_SlimeHolder_remove_slime"]
[connection signal="timeout" from="DestroyTimer" to="Grid" method="_on_DestroyTimer_timeout"]
[connection signal="timeout" from="CollapseTimer" to="Grid" method="_on_CollapseTimer_timeout"]
[connection signal="timeout" from="RefillTimer" to="Grid" method="_on_RefillTimer_timeout"]
